--- a/WebStore/Views/Order/Checkout.cshtml
+++ b/WebStore/Views/Order/Checkout.cshtml
@@ -89,7 +89,7 @@
                                         <td>@item.ProductName</td>
                                         <td>@item.Price.ToString("C")</td>
                                         <td>@item.Quantity</td>
-                                        <td>@(item.Price * item.Quantity).ToString("C")</td>
+                                        <td>@((item.Price * item.Quantity).ToString("C"))</td>
                                     </tr>
                                 }
                             </tbody>
